# STT-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  init_environment.sh
server/: .env.example  README.md  docker-compose.yml  run.sh  setup.sh  stop.sh
server/configs/: apiserver.conf  clearml.conf
whisper/: .env.example  README.md  config.yml  pyproject.toml  train.py
whisper/utils/: dataset.py  html.py  inference.py  misc.py  preprocessing.py  service.py
